@@ -11,10 +11,11 @@ Version 0.3.6 (under dev!)
   /window scroll_horiz) (task #11112)
 * api: fix bug with function config_set_desc_plugin (use immediately
   description for option when function is called)
+* irc: fix memory leak on plugin unload (free ignores)
 * irc: fix memory leak in message parser (when called from other plugins like
   relay) (bug #33387)
-* irc: fix memory leak on plugin unload (free ignores)
 * relay: fix memory leak (free some parsed messages) (bug #33387)
+* relay: fix memory leak on plugin load (free raw messages)
 * logger: add option logger.file.flush_delay (task #11118)
 
 Version 0.3.5 (2011-05-15)
